[project]
name = "multi-agent-wedding-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.1.0",
    "dotenv>=0.9.9",
    "isort>=8.0.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.9",
    "tavily>=1.1.0",
]
